--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react-dom": "^19.0.0",
     "react-hook-form": "^7.54.2",
     "react-router": "^7.4.0",
+    "react-router-dom": "^7.4.0",
     "react-toastify": "^11.0.5",
     "tailwindcss": "^4.0.14",
     "yup": "^1.6.1"
